--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,7 @@
 <IfModule mod_rewrite.c>
+    <FilesMatch "\.(css|js)$">
+    Header set Cache-Control "max-age=172800, public, must-revalidate"
+    </FilesMatch>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
