--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "spatie/laravel-analytics": "^4.1",
         "yajra/laravel-datatables": "^9.0"
     },
     "require-dev": {
