--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "astrotomic/laravel-translatable": "^11.11",
         "bensampo/laravel-enum": "^6.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "mcamara/laravel-localization": "^1.7",
         "spatie/laravel-analytics": "^4.1",
         "yajra/laravel-datatables": "^9.0"
     },
