--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "mcamara/laravel-localization": "^1.7",
+        "renatomarinho/laravel-page-speed": "^2.1",
         "spatie/laravel-analytics": "^4.1",
         "yajra/laravel-datatables": "^9.0"
     },
